src/test/ui/nll/issue-54499.stderr
error[E0718]: cannot assign to `s.0` when `s` is not initialized
  --> $DIR/issue-54499.rs:15:5
   |
LL |     s.0 = 1;
   |     ^^^^^^^

error[E0718]: cannot assign to `s.1` when `s` is not initialized
  --> $DIR/issue-54499.rs:16:5
   |
LL |     s.1 = 2;
   |     ^^^^^^^

error[E0718]: cannot assign to `s.0` when `s` is not initialized
  --> $DIR/issue-54499.rs:22:5
   |
LL |     s.0 = 3;
   |     ^^^^^^^ will also have to be declared `mut`

error[E0718]: cannot assign to `s.1` when `s` is not initialized
  --> $DIR/issue-54499.rs:23:5
   |
LL |     s.1 = 4;
   |     ^^^^^^^ will also have to be declared `mut`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0718`.
